refactor(equipment-inventory): change current-stock to quantity, remove low-quantity notification, and change sql service

--- a/Components/EquipmentDialog/EquipmentDialogCard.axaml
+++ b/Components/EquipmentDialog/EquipmentDialogCard.axaml
@@ -100,12 +100,12 @@
 							</StackPanel>
 							<StackPanel Grid.Row="2">
 								<NumericUpDown
-                                    shadui:ControlAssist.Label="Current Stock"
+                                    shadui:ControlAssist.Label="Quantity"
                                     Classes="Clearable"
                                     FormatString="N0"
                                     ShowButtonSpinner="False"
                                     Watermark="0"
-                                    Value="{CompiledBinding CurrentStock, Mode=TwoWay}">
+                                    Value="{CompiledBinding Quantity, Mode=TwoWay}">
 									<NumericUpDown.InnerLeftContent>
 										<TextBlock Margin="8,0,-8,0" Text="×" />
 									</NumericUpDown.InnerLeftContent>
