refactor(training-schedules-view): add coach filtering within the secondary breakpoint-view

--- a/Views/TrainingSchedulesView.axaml
+++ b/Views/TrainingSchedulesView.axaml
@@ -299,6 +299,10 @@
                                             Width="160"
                                             ItemsSource="{CompiledBinding PackageFilterItems}"
                                             SelectedItem="{CompiledBinding SelectedPackageFilterItem, Mode=TwoWay}" />
+                                        <ComboBox
+                                            Width="160"
+                                            ItemsSource="{CompiledBinding CoachFilterItems}"
+                                            SelectedItem="{CompiledBinding SelectedCoachFilterItem, Mode=TwoWay}" />
                                         <Button
                                             Classes="Primary"
                                             Padding="30,0"
