--- a/Views/DashboardView.axaml
+++ b/Views/DashboardView.axaml
@@ -262,7 +262,7 @@
 															Text="Recent Sales" />
 														<TextBlock Classes="Caption Muted" FontSize="14" Text="{CompiledBinding SalesSummary}"/>
 													</StackPanel>
-													<ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+													<ScrollViewer VerticalScrollBarVisibility="Auto">
 														<Interaction.Behaviors>
 															<scroll:VerticalScrollViewerAnimatedBehavior/>
 														</Interaction.Behaviors>
@@ -311,6 +311,7 @@
 																			VerticalAlignment="Center"
 																			HorizontalAlignment="Left"
 																			FontSize="15"
+																			TextWrapping="WrapWithOverflow"
 																			FontWeight="SemiBold"
 																			Text="{CompiledBinding ProductName}"/>
 
@@ -319,6 +320,7 @@
 																			Grid.Column="2"
 																			VerticalAlignment="Center"
 																			HorizontalAlignment="Right"
+																			TextWrapping="WrapWithOverflow"
 																			FontSize="15"
 																			FontWeight="Bold"
 																			Foreground="{DynamicResource SuccessColor}"
@@ -391,7 +393,7 @@
 																Text="Recent Sales" />
 														<TextBlock Classes="Caption Muted" FontSize="14" Text="{CompiledBinding SalesSummary}"/>
 													</StackPanel>
-													<ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+													<ScrollViewer VerticalScrollBarVisibility="Auto">
 														<Interaction.Behaviors>
 															<scroll:VerticalScrollViewerAnimatedBehavior/>
 														</Interaction.Behaviors>
@@ -438,6 +440,7 @@
 																			Grid.Column="1"
 																			VerticalAlignment="Center"
 																			HorizontalAlignment="Center"
+																			TextWrapping="WrapWithOverflow"
 																			FontSize="15"
 																			FontWeight="SemiBold"
 																			Text="{CompiledBinding ProductName}"/>
@@ -447,6 +450,7 @@
 																			Grid.Column="2"
 																			VerticalAlignment="Center"
 																			HorizontalAlignment="Right"
+																			TextWrapping="WrapWithOverflow"
 																			FontSize="15"
 																			FontWeight="Bold"
 																			Foreground="{DynamicResource SuccessColor}"
