refactor(audit-logs-view): adjust DataGrid action-column on the primary breakpoint-view

--- a/Views/AuditLogsView.axaml
+++ b/Views/AuditLogsView.axaml
@@ -180,7 +180,8 @@
 													Header="Action"
 													IsReadOnly="True"
 													FontSize="14"
-													Width="237" />
+													MinWidth="250"
+													Width="*" />
 											</DataGrid.Columns>
 										</DataGrid>
 									</StackPanel>
